--- a/FilmsWebApi/FilmsWebApi.DAL/FilmsWebApi.DAL.csproj
+++ b/FilmsWebApi/FilmsWebApi.DAL/FilmsWebApi.DAL.csproj
@@ -59,16 +59,13 @@
   <ItemGroup>
     <Compile Include="Context\AppContext.cs" />
     <Compile Include="Context\AppDataInitializer.cs" />
-    <Compile Include="Infrastructure\IAppContext.cs" />
-    <Compile Include="Infrastructure\IFilmsRepository.cs" />
-    <Compile Include="Infrastructure\IBaseRepository.cs" />
+    <Compile Include="Infrastructure\IGenericRepository.cs" />
     <Compile Include="Infrastructure\IUoW.cs" />
     <Compile Include="Models\AppUser.cs" />
     <Compile Include="Models\BaseEntity.cs" />
     <Compile Include="Models\Film.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\BaseRepository.cs" />
-    <Compile Include="Repositories\FilmsRepository.cs" />
+    <Compile Include="Repositories\GenericRepository.cs" />
     <Compile Include="UnitOfwork\UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup />
