--- a/FilmsWebApi/FilmsWebApi.BLL/FilmsWebApi.BLL.csproj
+++ b/FilmsWebApi/FilmsWebApi.BLL/FilmsWebApi.BLL.csproj
@@ -40,7 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO\FilmDTO.cs" />
+    <Compile Include="Infrastructure\IFilmService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AppService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FilmsWebApi.DAL\FilmsWebApi.DAL.csproj">
@@ -48,6 +51,7 @@
       <Name>FilmsWebApi.DAL</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
