--- a/FilmsWebApi/FilmsWebApi.Web/FilmsWebApi.Web.csproj
+++ b/FilmsWebApi/FilmsWebApi.Web/FilmsWebApi.Web.csproj
@@ -187,9 +187,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\RegisterModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\CustomOAuthProvider.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Validators\CredentialsValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -209,7 +211,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FilmsWebApi.BLL\FilmsWebApi.BLL.csproj">
