--- a/FilmsWebApi/FilmsWebApi.Web/Web.config
+++ b/FilmsWebApi/FilmsWebApi.Web/Web.config
@@ -11,7 +11,9 @@
     <connectionStrings>
       <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Films.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
     </connectionStrings>
-  <appSettings></appSettings>
+    <appSettings>
+      <add key="owin:AutomaticAppStartup" value="true" />
+    </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
